# recipe-parser

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md
scripts/: benchmark_delays.py  bootstrap.sh
src/: main.py
src/core/: __init__.py  config.py  logging.py  models.py  normalization.py  writer.py
src/parsers/: recipe_parser.py
src/storage/: link_store.py
src/workers/: link_collector.py  recipe_fetcher.py
tests/: test_link_collector_http.py  test_link_store.py  test_recipe_parser.py  test_utils.py  test_writer.py
tests/fixtures/: bento_tort.html  search_page.html
