[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-scraper"
version = "0.1.0"
description = "Async Playwright crawler that exports 1000.menu recipes into TSV batches"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Bogodist", email = "bogodist@example.com"}
]
license = {text = "MIT"}
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
  "playwright>=1.47",
  "httpx>=0.27",
  "selectolax>=0.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6"
]

[project.scripts]
recipe-crawler = "src.main:app"
